@@ -38,57 +38,6 @@ this repository contains the full copyright notices and license terms. -->
         </record>
         <menuitem parent="menu_ui"
             action="act_view_form" id="menu_view"/>
-        <record model="ir.ui.view" id="view_sc_view_form">
-            <field name="model">ir.ui.view_sc</field>
-            <field name="type">form</field>
-            <field name="name">ui_view_sc_form</field>
-        </record>
-        <record model="ir.ui.view" id="view_sc_view_tree">
-            <field name="model">ir.ui.view_sc</field>
-            <field name="type">tree</field>
-            <field name="name">ui_view_sc_list</field>
-        </record>
-        <record model="ir.action.act_window" id="act_view_sc_form">
-            <field name="name">View Shortcuts</field>
-            <field name="type">ir.action.act_window</field>
-            <field name="res_model">ir.ui.view_sc</field>
-        </record>
-        <record model="ir.action.act_window.view"
-            id="act_view_sc_form_view1">
-            <field name="sequence" eval="1"/>
-            <field name="view" ref="view_sc_view_tree"/>
-            <field name="act_window" ref="act_view_sc_form"/>
-        </record>
-        <record model="ir.action.act_window.view"
-            id="act_view_sc_form_view2">
-            <field name="sequence" eval="2"/>
-            <field name="view" ref="view_sc_view_form"/>
-            <field name="act_window" ref="act_view_sc_form"/>
-        </record>
-        <menuitem parent="menu_ui"
-            action="act_view_sc_form" id="menu_view_sc"/>
-
-        <record model="ir.ui.view" id="view_sc_view_board">
-            <field name="model">ir.ui.view_sc</field>
-            <field name="type">tree</field>
-            <field name="name">ui_view_sc_board</field>
-        </record>
-
-        <record model="ir.action.wizard" id="act_view_sc_add">
-            <field name="name">Add Shortcut</field>
-            <field name="wiz_name">ir.ui.view_sc.add</field>
-        </record>
-
-        <record model="ir.action.wizard" id="act_view_sc_open">
-            <field name="name">Open Shortcut</field>
-            <field name="wiz_name">ir.ui.view_sc.open</field>
-        </record>
-
-        <record model="ir.action.keyword" id="act_view_sc_open_keyword1">
-            <field name="action" ref="act_view_sc_open"/>
-            <field name="keyword">tree_open</field>
-            <field name="model">ir.ui.view_sc,-1</field>
-        </record>
 
         <record model="ir.ui.view" id="view_tree_width_view_form">
             <field name="model">ir.ui.view_tree_width</field>
