@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<tree string="Shortcuts" keyword_open="1" sequence="sequence">
-    <field name="name" expand="1"/>
+<tree string="Menu Favorites" sequence="sequence">
+    <field name="menu"/>
+    <field name="sequence" tree_invisible="1"/>
 </tree>
