@@ -1,15 +1,0 @@
-<?xml version="1.0"?>
-<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
-<form string="Shortcut">
-    <label name="name"/>
-    <field name="name" colspan="3"/>
-    <label name="resource"/>
-    <field name="resource"/>
-    <label name="res_id"/>
-    <field name="res_id"/>
-    <label name="user_id"/>
-    <field name="user_id"/>
-    <label name="sequence"/>
-    <field name="sequence"/>
-</form>
